yiltc-v0.2-backup/testsuite/negative/return_type_mismatch.yilt
// Return type mismatch: declared int but return str.
fn bad() int
    return "not an int"
